 - New APIs: SageMaker and SageMakerRuntime
 - New APIs: MediaConvert, MediaLive, MediaPackage, MediaStore, MediaStoreData
 - New APIs: KinesisVideo, KinesisVideoMedia, KinesisVideoArchivedMedia
 - New API: MQ
 - New API: ResourceGroups
 - New API: GuardDuty
 - New API: Comprehend
 - New API: Cloud9
 - New API: AppSync
 - New API: AlexaForBusiness
 - New API: ServiceDiscovery
 - New API: WorkMail
 - API update: IoT
 - API update: Shield
 - API update: Rekognition
 - API update: Route53
 - API update: Glue
 - API update: Organizations
 - API update: CodeBuild
 - API update: StepFunctions
 - API update: WorkDocs
 - API update: CloudFormation
 - API update: Firehose
 - API update: Kinesis
 - API update: StorageGateway
 - API update: EMR
 - API update: XRay
 - API update: ACM
 - API update: S3
 - API update: ApiGateway
 - API update: ApplicationAutoscaling
 - API update: ECS
 - API update: EC2
 - API update: ELBv2
 - API update: OpsWorksCM
 - API update: WAFRegional
 - API update: WAF
 - API update: SQS
 - API update: SES
 - API update: ES
 - API update: CodeCommit
 - API update: ECR
 - API update: RDS
 - API update: DMS
 - API update: ElasticBeanstalk
 - API update: Lightsail
 - API update: SSM
 - API update: Pinpoint
 - API update: DirectConnect
 - API update: ApiGateway
 - API update: CloudFront
 - API update: Glue
 - API update: ElastiCache
 - API update: Lambda
 - API update: SSM
 - API update: CodeDeploy
 - API update: Batch
 - API update: CognitoIdp
 - API update: Greengrass
 - API update: ECS
 - API update: AutoScaling
 - API update: DynamoDB
 - API update: Glacier
 - API update: CloudDirectory
 - API update: ServiceCatalog
 - API update: CloudWatch
 - API update: AppStream
 - API update: Budgets
 - API update: LexModels

0.36 03 Nov 2017
 - Fix Bug: #210: S3 PutObject was not working: the Content-MD5 header was not 
            calculated correctly (glenveegee)
 - Fix Bug: #201: RestJson services were not passing fields in their correct
            locations
