@@ -9,6 +9,7 @@ package Paws::API::ServiceToClass;
     apigateway => 'ApiGateway',
     appsync => 'AppSync',
     autoscaling => 'AutoScaling',
+   'autoscaling-plans' => 'AutoScalingPlans',
    'application-autoscaling' => 'ApplicationAutoScaling',
     appstream => 'AppStream',
     batch => 'Batch',
@@ -135,6 +136,7 @@ package Paws::API::ServiceToClass;
     sts => 'STS',
     support => 'Support',
     sdb => 'SDB',
+    transcribe => 'Transcribe',
     translate => 'Translate',
     waf => 'WAF',
    'waf-regional' => 'WAFRegional',
